--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -1,8 +1,9 @@
 main {
-  margin-block-start: 2rem;
-  margin-inline-start: 2rem;
-  margin-inline-end: 2rem;
-  border-top: 1px #aaa solid;
+  margin-block-start:1.4rem;
+  // margin-inline-start:clamp(0.3rem,3%,2rem);
+  // margin-inline-end:clamp(0.3rem,3%,2rem);
+  border-top:1px solid #aaa;
+  padding-block-start: 0.8rem;
   // display: grid;
   // grid-template-columns: 1fr 2fr 2fr 1fr;
   & > article {
